tests/errors/parser/invalid-width4.futil
component main() -> () {
  cells { }
  wires {
    r.in = 2'd4;
  }
  control { }
}
